[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/FlopDesignFONT.otf" type="DynamicFontData" id=1]
[ext_resource path="res://LevelScene.gd" type="Script" id=2]
[ext_resource path="res://TitleBar.gd" type="Script" id=3]
[ext_resource path="res://images/leftward_white.png" type="Texture" id=4]
[ext_resource path="res://images/leftward_black.png" type="Texture" id=5]
[ext_resource path="res://images/lock_open_white.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="LevelScene" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 900.0
color = Color( 0.501961, 0.752941, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" type="ColorRect" parent="."]
margin_right = 500.0
margin_bottom = 50.0
color = Color( 0.180392, 0.309804, 0.309804, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="TitleBar"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 49.0
hint_tooltip = "Back"
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TitleBar"]
margin_left = 50.0
margin_top = 1.0
margin_right = 450.0
margin_bottom = 49.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Title Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 100.0
margin_right = 490.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="LockOpen" type="TextureRect" parent="."]
margin_left = -92.0
margin_top = 1.0
margin_right = -44.0
margin_bottom = 49.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TitleBar/BackButton" to="." method="_on_BackButton_pressed"]
